--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,32 @@ body {
 ul li {
     list-style: none;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
+}
+
+button {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    border: none;
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 7px 20px 7px 20px;
+    text-decoration: none;
+    outline: none;
+
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+button:hover {
+    background: rgba(246,246,246,1.0);
+    color: rgba(46, 36, 33, 1.0);
 }
 
 h1 {
