--- a/style/style.css
+++ b/style/style.css
@@ -16,11 +16,6 @@ ul li {
 
 button {
     background: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-    background-image: -o-linear-gradient(top, #3498db, #2980b9);
-    background-image: linear-gradient(to bottom, #3498db, #2980b9);
     border: none;
     -webkit-border-radius: 5;
     -moz-border-radius: 5;
@@ -60,9 +55,84 @@ hr {
 }
 
 .menu {
-    position: fixed;
+    position: absolute;
     background-color: rgba(46,36,33, 0.7);
     height: 100%;
     width: 300px;
     padding: 20px;
 }
+
+input[type="text"] {
+    padding: 3px;
+    border: solid 2px #c9c9c9;
+    transition: border 0.3s;
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    font-family: 'Open Sans', sans-serif;
+}
+input[type="text"]:focus,
+input[type="text"].focus {
+    border: solid 2px #969696;
+}
+
+
+.controls {
+    position: fixed;
+    bottom: 0px;
+    right: 0;
+    height: 60px;
+    width: 400px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.controls > * {
+    float: right;
+}
+
+.controls button {
+    background-color: rgba(246, 246, 246, 0.3);
+    color: rgba(0, 0, 0, 1);
+    padding: 15px 15px 15px 15px;
+    -webkit-border-radius: 30;
+    -moz-border-radius: 30;
+    border-radius: 30px;
+    font-size: 20px;
+}
+
+.controls button:hover {
+    background-color: rgba(246, 246, 246, 0.5);
+    /*color: rgba(246, 246, 246, 1);*/
+}
+
+.presets {
+    margin-top: 20px;
+    overflow: auto;
+}
+
+.presets > * {
+    float: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
