--- a/style/style.css
+++ b/style/style.css
@@ -115,6 +115,26 @@ input[type="text"].focus {
     float: left;
 }
 
+.input-file-button {
+    position: relative;
+}
+
+input[type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 3px;
+    border: solid 2px #c9c9c9;
+    background-color: red;
+    transition: border 0.3s;
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    font-family: 'Open Sans', sans-serif;
+    opacity: 0;
+}
 
 
 
